--- a/next-app/package.json
+++ b/next-app/package.json
@@ -12,7 +12,8 @@
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-intersection-observer": "^9.16.0"
+    "react-intersection-observer": "^9.16.0",
+    "ress": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
